--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -38,7 +38,7 @@
         <li><a href="/gamers/edit"><i class="icon-wrench"></i>Edit Account Settings</a></li>
         <li><a href="/gamers/sign_out"><i class="icon-home"></i>Sign out</a></li>
         <% else I18n.locale==:ar %>
-        <li><a href="/gamers/edit"><i class="icon-wrench"></i>تعئيير البيانات</a></li>
+        <li><a href="/gamers/edit"><i class="icon-wrench"></i>تغيير البيانات</a></li>
         <li><a href="/gamers/sign_out"><i class="icon-home"></i>تسجيل خروج</a></li>
         <% end %>
       <% end %>
