[Issue #92] categories now shown as tags when the page reloads

--- a/arability/app/views/search/_categories-autocomplete.html.erb
+++ b/arability/app/views/search/_categories-autocomplete.html.erb
@@ -3,6 +3,7 @@
   var categories = <%= raw categories.to_s %>
   $(function() {
   $(".categories-autocomplete").tagsManager({
+    prefilled: <%= raw @categories %>,
     delimeters: [44, 188, 13],
     hiddenTagListName: "categories",
     typeahead: true,
