--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -22,7 +22,7 @@
     <div class="control-group">
       <%= f.label t(:categories), :class => "control-label" %>
       <div class="controls">
-        <%= f.collection_select(:categories, Category.all, :id, :name, {:prompt => true}, {:id =>"cat"}) %>
+        <%= f.collection_select(:category, Category.all, :id, :name, {:prompt => true}, {:id =>"cat"}) %>
         <span class="req">* </span>
     </div>
   </div>
