[Issue #188] [WIP] adds the export_to_xml action to projects controller

--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -42,6 +42,7 @@
           </button>
           <ul class="dropdown-menu">
             <%= link_to t(:file) + ".csv", action: "export_to_csv", controller: "projects", project_id: @project.id %>
+            <%= link_to t(:file) + ".xml", action: "export_to_xml", controller: "projects", project_id: @project.id %>
           </ul>
         </div>
         <div class="btn-group">
