--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -169,12 +169,12 @@
           <% if I18n.locale==:en %>
           <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100px" height="100px" />
           <span font='20' style="position:relative; padding:40px;">
-            <%= link_to "Connect to twitter", "/auth/twitter" %>
+            <%= link_to "Connect to twitter", "/auth/twitter?use_authorize=true" %>
           </span>        
           <% else I18n.locale==:ar %>
           <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100px" height="100px" />
           <span font='20' style="position:relative; padding:40px;">
-            <%= link_to "تواصل مع تويتر", "/auth/twitter" %>
+            <%= link_to "تواصل مع تويتر", "/auth/twitter?use_authorize=true" %>
           </span>
           <% end %>
           <% end %>
