--- a/arability/app/views/my_subscription/choose_sub.html.erb
+++ b/arability/app/views/my_subscription/choose_sub.html.erb
@@ -20,29 +20,29 @@
 	<div class="well" style="margin-left: 30px; box-shadow: 0 4px 2px #ccc;">
 	<p><%= radio_button_tag(:my_subscription, sm.id, sm.id == selected_sub_id) %> <%= sm.name %><br />
 		<% if I18n.locale==:en %>
-		<h5>The limit for the word search is:</h5>
+		<h5>The maximum number of word searches is:</h5>
 		<% else I18n.locale==:ar %>
-		<h5> الحد الاقصى للبحث عن الكلمات:</h5>
+		<h5>الحد الأقصى للبحث عن الكلمات في مشروعك هي:</h5>
 		<% end %>
-		<%=sm.limit_search%><br />
+		<%=sm.limit_search%><%= t(:per_month)%><br />
 		<% if I18n.locale==:en %>
-		<h5>The limit for the word follow is:</h5>
+		<h5>The maximun number for the word follow is:</h5>
 		<% else I18n.locale==:ar %>
-		<h5>الحد الاقصى لمتابعة الكلمات:</h5>
+		<h5>الحد الأقصى لمتابعة الكلمات في مشروعك هي:</h5>
 		<% end %>
-		<%=sm.limit_follow%><br/>
+		<%=sm.limit_follow%><%= t(:per_month)%><br/>
 		<% if I18n.locale==:en %>
-		<h5>The limit for the word add is:</h5>
+		<h5>The maximum number for adding words to your project is:</h5>
 		<% else I18n.locale==:ar %>
-		<h5>الحد الاقصى لاضافة الكلمات:</h5>
+		<h5>الحد الأقصى لاضافة الكلمات إلى مشروعك هي:</h5>
 		<% end %>
-		<%=sm.limit%><br />
+		<%=sm.limit%><%= t(:per_month)%><br />
 		<% if I18n.locale==:en %>
-		<h5>The limit for the projects:</h5>
+		<h5>The maximum number of projects you can create is:</h5>
 		<% else I18n.locale==:ar %>
-		<h5>الحد الاقصى لاضافة المشارىع:</h5>
+		<h5>الحد الأقصى لانشاء المشاريع هي:</h5>
 		<% end %>
-		<%=sm.limit_project%>
+		<%=sm.limit_project%><%= t(:per_month)%>
 	</p>
     </div>
             </td>
