--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -27,8 +27,8 @@
                 <%= f.text_field :login, style: "margin-bottom: 15px;", placeholder: t(:username_or_email), size: "30" %>
                 <%= f.password_field :password, style: "margin-bottom: 15px;", placeholder: t(:password), size: "30" %>
                 <%= f.submit t(:sign_in), style: "clear: left; width: 100%; height: 32px; font-size: 13px;", :class => "btn btn-primary" %>
-                <%= link_to image_tag("/assets/sign-in-with-twitter-gray.png") t(:twitter_signin), "/authentications/twitter_signin",
-                 style: "font-size: 13px",:class => "btn btn-info" %>
+                <%= link_to image_tag("/assets/sign-in-with-twitter-link.png"),
+                 "/authentications/twitter_signin", style: "font-size: 13px",:class => "btn" %>
               <% end %>
             </div>
           </li>
