--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -290,11 +290,11 @@ function setButtons(){
     <h2 class="lang-header">Pick the language you want to play with</h2><br>
     <div class="game-lang">
 
-      <button data-content="<h5>this is a popover</h5> <button class='btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>got it</button>" data-placement="left" data-title="check it out" data-html="true" id = "eng-btn" class="btn btn-info eng-btn" onclick="setLang(0)">English</button><br><br><br><br>
+      <button data-content="<p>This button allows you to form, and vote on, only english words during game play<p> <button class='btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>got it</button>" data-placement="left" data-title="<h4>English Button</h4>" data-html="true" id = "eng-btn" class="btn btn-info eng-btn" onclick="setLang(0)">English</button><br><br><br><br>
 
-      <button class="btn btn-success ar-btn" onclick="setLang(1)">Arabic</button><br><br><br><br>
+      <button data-animation="true" data-content="<p>This button allows you to form, and vote on, only arabic words during game play<p> <button class='btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='ar-btn-po'onclick='destroy(this.id)'>got it</button>" data-placement="right" data-title="<h4>Arabic Button</h4>" data-html="true" id = "ar-btn" class="btn btn-success ar-btn" onclick="setLang(1)">Arabic</button><br><br><br><br>
 
-      <button class="btn btn-warning both-btn" onclick="setLang(2)">Both</button>
+      <button data-content="<p>This button allows you to form, and vote on both arabic and english words during game play<p> <button class='btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='both-btn-po 'onclick='destroy(this.id)'>got it</button>" data-placement="left" data-title="<h4>Both Button</h4>" data-html="true" id = "both-btn" class="btn btn-warning both-btn" onclick="setLang(2)">Both</button>
 
     </div>
     <% end %>
