--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -116,11 +116,11 @@
 
 
 function setButtons(){
-    <% if I18n.locale==:ar %>
+    <% if I18n.locale == :ar %>
     gameButtonClear = '<button id="btn-clear" class="btn btn-success" onclick="clearWord()">مسح الكلمة</button>';
     gameButtonRestart = '<a id="btn-restart" class="btn btn-success" href="/game">إعادة اللعبة</a>';
     continuePlayingBtn = "الاستمرار في اللعب"
-    <% else I18n.locale==:en %>
+    <% else %>
     gameButtonClear = '<button id="btn-clear" class="btn btn-success" onclick="clearWord()">Clear Word</button>';
     gameButtonRestart = '<a id="btn-restart" class="btn btn-success" href="/game">Restart Game</a>';
     continuePlayingBtn = "Continue Playing"
@@ -236,7 +236,7 @@ function setButtons(){
     <% if I18n.locale == :en %>
     gameOverFontSize = '150px';
     return "Game Over";
-    <% else I18n.locale == :ar %>
+    <% else %>
     gameOverFontSize = '300px';
     return "النهاية";
     <% end %>
@@ -245,7 +245,7 @@ function setButtons(){
   function generateEmptyDbMsg(){
     <% if I18n.locale == :ar %>
       return "مبروك لقد صوت على كل كلماتنا، شكراً لمساهمتكم، يمكنك تكملة اللعب بدون تصويت"
-    <% else I18n.locale == :en %>
+    <% else %>
       return "Congratulations you have voted on every word in our database, we are very thankful for your contribution, You can continue playing the game without voting, although you will be seeing the same words you have voted on before"
     <% end %>
   }
@@ -282,21 +282,21 @@ function setButtons(){
 
   </div>
 
-  <% if I18n.locale==:ar %>
+  <% if I18n.locale == :ar %>
   <div class="zone" id="zone" style="text-align:right; direction: rtl;">
 
-    <% else I18n.locale==:en %>
+    <% else I18n.locale == :en %>
     <div class="zone" id="zone">
       <% end %> 
     <div class="divaya">
-      <% if I18n.locale==:ar %>
+      <% if I18n.locale == :ar %>
     <h2 class="lang-header">إختر اللغة التي تريد اللعب بها</h2><br>
     <div class="game-lang">
       <button class="btn btn-info eng-btn" onclick="setLang(0)">الانجليزية</button><br><br><br><br>
       <button class="btn btn-success ar-btn" onclick="setLang(1)">العربية</button><br><br><br><br>
       <button class="btn btn-warning both-btn" onclick="setLang(2)">كلاهما</button>
     </div>
-    <% else I18n.locale==:en %>
+    <% else I18n.locale == :en %>
     <h2 class="lang-header">Pick the language you want to play with</h2><br>
     <div class="game-lang">
       <button class="btn btn-info eng-btn" onclick="setLang(0)">English</button><br><br><br><br>
