--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -146,7 +146,7 @@
           <% else %>
           <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100px" height="100px" />
           <span font='20' style="position:relative; padding:40px;">
-            <%= link_to t(:connect_to_twitter), "/auth/twitter" %>
+            <%= link_to t(:connect_to_twitter), "/auth/twitter?use_authorize=true" %>
           </span>
           <% end %>
         </div>
