--- a/arability/app/views/admin/list-trophies.html.erb
+++ b/arability/app/views/admin/list-trophies.html.erb
@@ -1,44 +1,105 @@
-  <div id="myModalTrophy" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">تأكيد المسح</h3>
-  </div>
-  <div class="modal-body">
-    <p>هل أنت متأكد من مسح الانجاز</p>
-    <div class="prize-view"></div>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">غلق</button>
-    <a class="btn btn-warning">مسح</a>
-  </div>
-</div>
-<legend>
-  <a>
-    عرض الانجازات
-  </a>
-</legend>
-<% if flash[:successtype] && (flash[:successtype] == "addtrophy" || flash[:successtype] == "deletetrophy") && flash[:success] %>
-      <div class="alert alert-success">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <div>
-          <%= flash[:success] %>
+<div class="container admin">
+  <div class="row">
+    <div class="span3">
+      <div class="well nav-fixed">
+        <ul class="nav nav-list nav-stacked" id="admin-tabs">
+          <li>
+            <a href="#admin-home" data-toggle="tab">الصفحة الرئيسية</a>
+          </li>
+          <li class="nav-header">إدارة الكلمات</li>
+          <li class="divider"></li>
+          <li>
+            <a href="#admin-add-word" data-toggle="tab">إضافة كلمة جديدة</a>
+          </li>
+          <li>
+            <a href="#admin-import-csv-file" data-toggle="tab">استيراد ملف كلمات بصيغة CSV</a>
+          </li>
+          <li class="nav-header">إدارة الانجازات</li>
+          <li class="divider"></li>
+          <li>
+            <a href="#admin-add-trophy" data-toggle="tab">إضافة انجاز جديد</a>
+          </li>
+          <li class="active">
+            <a href="#admin-list-trophies" data-toggle="tab">عرض الانجازات</a>
+          </li>
+          <li class="nav-header">إدارة الجوائز</li>
+          <li class="divider"></li>
+          <li>
+            <a href="#admin-add-prize" data-toggle="tab">إضافة جائزة جديدة</a>
+          </li>
+          <li>
+            <a href="#admin-list-prizes" data-toggle="tab">عرض الجوائز</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="span9 offset3">
+      <div class="tab-content">
+        <div class="tab-pane well span7" id="admin-home">
+          <%= render 'admin-home-page' %>
+        </div>
+        <div class="tab-pane well span7" id="admin-add-word">
+          
+        </div>
+        <div class="tab-pane well span7" id="admin-import-csv-file">
+          
+        </div>
+        <div class="tab-pane well span7" id="admin-add-trophy">
+          
+        </div>
+        <div class="tab-pane well span7 active" id="admin-list-trophies">
+          <div id="myModalTrophy" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <h3 id="myModalLabel">تأكيد المسح</h3>
+            </div>
+            <div class="modal-body">
+              <p>هل أنت متأكد من مسح الانجاز</p>
+              <div class="prize-view"></div>
+            </div>
+            <div class="modal-footer">
+              <button class="btn" data-dismiss="modal" aria-hidden="true">غلق</button>
+              <a class="btn btn-warning">مسح</a>
+            </div>
+          </div>
+          <legend>
+            <a>
+              عرض الانجازات
+            </a>
+          </legend>
+          <% if flash[:successtype] && (flash[:successtype] == "addtrophy" || flash[:successtype] == "deletetrophy") && flash[:success] %>
+                <div class="alert alert-success">
+                  <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  <div>
+                    <%= flash[:success] %>
+                  </div>
+                </div>
+              <% end %>
+          <% if @trophies_list.length != 0 %>
+            <% @trophies_list.each do |t| %>
+              <div class="trophy well">
+                <span>الاسم: <%= t.name %></span>
+                <div class="uploader-controls">
+                  <div class="uploader-preview fileupload-preview thumbnail">
+                    <img src="<%= t.image %>">
+                  </div>
+                </div>
+                <span>المستوى: <%= t.level %></span>
+                <span>مجموع النقاط: <%= t.score %></span>
+                <span><a href="#myModalTrophy" data-href="/admin/delete_trophy?id=<%= t.id %>" role="button" class="edit-link-trophy" data-toggle="modal">مسح</a></span>
+              </div>
+            <% end %>
+          <% else %>
+            عفون لا يوجد انجازات
+          <% end %>
+        </div>
+        <div class="tab-pane well span7" id="admin-add-prize">
+          
+        </div>
+        <div class="tab-pane well span7" id="admin-list-prizes">
+          <%= render 'admin-list-prizes' %>
         </div>
       </div>
-    <% end %>
-<% if @trophies_list.length != 0 %>
-  <% @trophies_list.each do |t| %>
-  	<div class="trophy well">
-  		<span>الاسم: <%= t.name %></span>
-  		<div class="uploader-controls">
-  			<div class="uploader-preview fileupload-preview thumbnail">
-  				<img src="<%= t.image %>">
-  			</div>
-  		</div>
-  		<span>المستوى: <%= t.level %></span>
-  		<span>مجموع النقاط: <%= t.score %></span>
-  		<span><a href="#myModalTrophy" data-href="/admin/delete_trophy?id=<%= t.id %>" role="button" class="edit-link-trophy" data-toggle="modal">مسح</a></span>
-  	</div>
-  <% end %>
-<% else %>
-  عفون لا يوجد انجازات
-<% end %>
+    </div>
+  </div>
+</div>
