--- a/arability/app/views/admin/dashboard.html.erb
+++ b/arability/app/views/admin/dashboard.html.erb
@@ -36,25 +36,45 @@
 		<div class="span9 offset3">
 			<div class="tab-content">
 				<div class="tab-pane well span7 active" id="admin-home">
-					<%= render 'admin-home-page' %>
-				</div>
-				<div class="tab-pane well span7" id="admin-add-word">
-					
-				</div>
-				<div class="tab-pane well span7" id="admin-import-csv-file">
-					
-				</div>
-				<div class="tab-pane well span7" id="admin-add-trophy">
-					
-				</div>
-				<div class="tab-pane well span7" id="admin-list-trophies">
-					
-				</div>
-				<div class="tab-pane well span7" id="admin-add-prize">
-					
-				</div>
-				<div class="tab-pane well span7" id="admin-list-prizes">
-					<%= render 'admin-list-prizes' %>
+					<ul>
+						<legend>
+							<a>
+								مرحبا بكم فى لوحة تحكم Arability
+							</a>
+						</legend>
+						من هنا يمكنكم التحكم فى محتوى اللعبة و اضافة الكلمات الى قاعدة البيانات <br>
+						من القائمة على يمين الصفحة يمكنكم اختيار الوضائف التالية<br>
+						<br><br>
+						<ul>
+							<li>
+								<strong>اضافة الكلمات عن طريق</strong>
+								<br><br>
+								<ol>
+									<li>اضافة كلمة جديدة كلمة بكلمة</li>
+									<li>استيراد ملف كلمات بصيغة CSV</li>
+								</ol>
+							</li>
+							<br><br>
+							<li>
+								<strong>ادارة الانجازات فى لعبة Arability عن طريق</strong>
+								<br><br>
+								<ol>
+									<li>اضافة انجاز جديد</li>
+									<li>عرض الانجازات و امكانية مسحها</li>
+								</ol>
+							</li>
+							<br><br>
+							<li>
+								<strong>ادارة الجوائز فى لعبة Arability عن طريق</strong>
+								<br><br>
+								<ol>
+									<li>إضافة جائزة جديدة</li>
+									<li>عرض الجوائز و امكانية مسحها</li>
+								</ol>
+							</li>
+						</ul>
+						<br><br>
+					</ul>
 				</div>
 			</div>
 		</div>
