[348][NW] modify routing and redirection

--- a/arability/app/views/admin/add-prize.html.erb
+++ b/arability/app/views/admin/add-prize.html.erb
@@ -36,7 +36,7 @@
 		<div class="span9 offset3">
 			<div class="tab-content">
 				<div class="tab-pane well span7 active" id="admin-add-prize">
-					<form class="form-horizontal" action="/admin/add_prize" method="post" enctype="multipart/form-data">
+					<form class="form-horizontal" action="/admin/add/prize/submit" method="post" enctype="multipart/form-data">
 						<fieldset>
 							<legend>
 								<a>
