--- a/arability/app/views/admin/import-csv-file.html.erb
+++ b/arability/app/views/admin/import-csv-file.html.erb
@@ -36,7 +36,7 @@
 		<div class="span9 offset3">
 			<div class="tab-content">
 				<div class="tab-pane well span7 active" id="admin-import-csv-file">
-					<form class="form-horizontal" action="/admin/upload" enctype="multipart/form-data" method="POST">
+					<form class="form-horizontal" action="/admin/import/csvfile/submit" enctype="multipart/form-data" method="POST">
 						<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
 						<legend>
 						  <a>
