--- a/arability/app/views/admin/add-trophy.html.erb
+++ b/arability/app/views/admin/add-trophy.html.erb
@@ -36,7 +36,7 @@
 		<div class="span9 offset3">
 			<div class="tab-content">
 				<div class="tab-pane well span7 active" id="admin-add-trophy">
-					<form class="form-horizontal" action="/admin/add_trophy" method="post" enctype="multipart/form-data">
+					<form class="form-horizontal" action="/admin/add/trophy/submit" method="post" enctype="multipart/form-data">
 						<fieldset>
 							<legend>
 								<a>
