--- a/arability/app/views/admin/add-word.html.erb
+++ b/arability/app/views/admin/add-word.html.erb
@@ -36,7 +36,7 @@
 		<div class="span9 offset3">
 			<div class="tab-content">
 				<div class="tab-pane well span7 active" id="admin-add-word">
-					<form class="form-horizontal" action="/admin/add_word" method="post">
+					<form class="form-horizontal" action="/admin/add/word/submit" method="post">
 						<fieldset>
 							<legend>
 								<a>
