--- a/arability/app/views/admin/import-csv-file.html.erb
+++ b/arability/app/views/admin/import-csv-file.html.erb
@@ -1,42 +1,10 @@
 <div class="container admin">
 	<div class="row">
-		<div class="span3">
-			<div class="well nav-fixed">
-				<ul class="nav nav-list nav-stacked" id="admin-tabs">
-					<li>
-						<a href="#admin-home" data-toggle="tab">الصفحة الرئيسية</a>
-					</li>
-					<li class="nav-header">إدارة الكلمات</li>
-					<li class="divider"></li>
-					<li>
-						<a href="#admin-add-word" data-toggle="tab">إضافة كلمة جديدة</a>
-					</li>
-					<li class="active">
-						<a href="#admin-import-csv-file" data-toggle="tab">استيراد ملف كلمات بصيغة CSV</a>
-					</li>
-					<li class="nav-header">إدارة الانجازات</li>
-					<li class="divider"></li>
-					<li>
-						<a href="#admin-add-trophy" data-toggle="tab">إضافة انجاز جديد</a>
-					</li>
-					<li>
-						<a href="#admin-list-trophies" data-toggle="tab">عرض الانجازات</a>
-					</li>
-					<li class="nav-header">إدارة الجوائز</li>
-					<li class="divider"></li>
-					<li>
-						<a href="#admin-add-prize" data-toggle="tab">إضافة جائزة جديدة</a>
-					</li>
-					<li>
-						<a href="#admin-list-prizes" data-toggle="tab">عرض الجوائز</a>
-					</li>
-				</ul>
-			</div>
-		</div>
+		<%= render partial: 'sidebar-nav', locals: {active: "import-csv"} %>
 		<div class="span9 offset3">
 			<div class="tab-content">
 				<div class="tab-pane well span7 active" id="admin-import-csv-file">
-					<form class="form-horizontal" action="/admin/import/csvfile/submit" enctype="multipart/form-data" method="POST">
+					<form class="form-horizontal" action="" enctype="multipart/form-data" method="POST">
 						<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
 						<legend>
 						  <a>
