[348][NW] fixing delete redirect

--- a/arability/app/views/admin/_sidebar-nav.html.erb
+++ b/arability/app/views/admin/_sidebar-nav.html.erb
@@ -2,7 +2,7 @@
 	<div class="well nav-fixed">
 		<ul class="nav nav-list nav-stacked" id="admin-tabs">
 			<li <%= active == "dashboard"? "class=active" : "" %>>
-				<a href="">الصفحة الرئيسية</a>
+				<a href="/admin">الصفحة الرئيسية</a>
 			</li>
 			<li class="nav-header">إدارة الكلمات</li>
 			<li class="divider"></li>
