--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -196,7 +196,7 @@
   end%>
       <td width="300px">
   <div class="well" style="margin-left: 30px; box-shadow: 0 4px 2px #ccc;">
-  <p><%= radio_button_tag(:my_subscription, sm.id, sm.id == selected_sub_id) %> <%= sm.name %><br />
+  <p><%= radio_button_tag(:my_subscription, sm.id, sm.id == selected_sub_id) %>  <%= sm.name %><br />
     <% if I18n.locale==:en %>
     <h5>The maximum number of word searches is:</h5>
     <% else I18n.locale==:ar %>
@@ -206,7 +206,7 @@
     <% if I18n.locale==:en %>
     <h5>The maximun number for the word follow is:</h5>
     <% else I18n.locale==:ar %>
-    <h5>الحد الأقصى لمتابعة الكلمات في مشروعك هي:</h5>
+    <h5>الحد الأقصى لمتابعة الكلمات هي:</h5>
     <% end %>
     <%=sm.limit_follow%><%= t(:per_month)%><br/>
     <% if I18n.locale==:en %>
@@ -220,7 +220,7 @@
     <% else I18n.locale==:ar %>
     <h5>الحد الأقصى لانشاء المشاريع هي:</h5>
     <% end %>
-    <%=sm.limit_project%><%= t(:per_month)%>
+    <%=sm.limit_project%>
   </p>
     </div>
             </td>       
