--- a/arability/app/views/games/_profile.html.erb
+++ b/arability/app/views/games/_profile.html.erb
@@ -1,8 +1,12 @@
 <div class = "main-div">
 <% if I18n.locale == :ar %> 
-<h1 class ="heading"><%= t(:vote_log)%></h1>
+<h1 class ="heading"><%= t(:vote_log)%>
+<a class="btn btn-success pull-left" onclick="backToGame()">الرجوع</a>
+</h1>
 <% else %>
-<h3 class ="heading"><%= t(:vote_log)%></h3>
+<h3 class ="heading"><%= t(:vote_log)%>
+<a class="btn btn-success pull-left" onclick="backToGame()">Back</a>
+</h3>
 <% end %>
 <table class="table table-bordered table-striped styling-center-table">
   <% if !@vote_log.blank? %>
