[Issue #205][WIP] Finished edit story

--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -22,10 +22,10 @@
     <div class="control-group">
       <%= f.label t(:categories), :class => "control-label" %>
       <div class="controls">
-        <% if I18n.locale == :en %>
-          <%= f.collection_select(:category, Category.all, :id, :english_name, {:prompt => true}, {:id =>"cat"}) %>
-        <% elsif I18n.locale == :ar %>
-          <%= f.collection_select(:category, Category.all, :id, :arabic_name, {:prompt => true}, {:id =>"cat"}) %>
+        <% if params[:action] == "new" %>
+          <%= f.collection_select(:category, Category.all, :id, :get_name_by_locale, {:prompt => true}, {:id =>"cat"}) %>
+        <% elsif params[:action] == "edit" %>
+          <%= f.collection_select(:category, Category.all, :id, :get_name_by_locale, {:prompt => @select_value, :selected => @project.category_id.to_i}, {:id =>"cat"}) %>
         <% end %>
     </div>
   </div>
