--- a/arability/app/views/admin/import-csv-file.html.erb
+++ b/arability/app/views/admin/import-csv-file.html.erb
@@ -11,8 +11,7 @@
 						    استيراد ملف كلمات بصيغة CSV
 						  </a>
 						</legend>
-
-						<% if @message == "0" %>
+						<% if @message == 0 %>
 							<div class="alert alert-success">
 						    	<button type="button" class="close" data-dismiss="alert">&times;</button>
 						    	<div>
@@ -21,7 +20,7 @@
 						  	</div>
 						<% end %>
 
-						<% if @message == "1" %>
+						<% if @message == 1 %>
 							<div class="alert alert-error">
 						    	<button type="button" class="close" data-dismiss="alert">&times;</button>
 						    	<div>
@@ -30,7 +29,7 @@
 						  	</div>
 						<% end %>
 
-						<% if @message && @message != "0" && @message != "1" %>
+						<% if @message && @message != 0 && @message != 1 %>
 							<div class="alert alert-error">
 						    	<button type="button" class="close" data-dismiss="alert">&times;</button>
 						    	<div>
