[348][WIP] add admin role to gamers

--- a/arability/app/views/admin/_admin-navbar.html.erb
+++ b/arability/app/views/admin/_admin-navbar.html.erb
@@ -2,13 +2,11 @@
 	<div class="navbar-inner">
 		<div class="container">
 			<a class="brand" href="/admin">لوحة تحكم Arability</a>
-			<% if logged_in? %>
 			<ul class="nav pull-right">
 				<li>
-					<%= link_to "تسجيل الخروج", :action => "logout" %>
+					<%= link_to "العودة الى Arability", "/" %>
 				</li>
 			</ul>
-			<% end %>
 		</div>
 	</div>
 </div>
