--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -39,6 +39,9 @@
         <li><a href="/gamers/sign_out"><i class="icon-home"></i>Sign out</a></li>
         <% else I18n.locale==:ar %>
         <li><a href="/gamers/edit"><i class="icon-wrench"></i>تعئيير البيانات</a></li>
+        <% if current_gamer.try(:admin?) %>
+          <li><a href="/admin">لوحة تحكم Arability</a></li>
+        <% end %>
         <li><a href="/gamers/sign_out"><i class="icon-home"></i>تسجيل خروج</a></li>
         <% end %>
       <% end %>
