--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -43,6 +43,7 @@
           <ul class="dropdown-menu">
             <%= link_to t(:file) + ".csv", action: "export_to_csv", controller: "projects", project_id: @project.id %>
             <%= link_to t(:file) + ".xml", action: "export_to_xml", controller: "projects", project_id: @project.id %>
+            <%= link_to t(:file) + ".json", action: "export_to_json", controller: "projects", project_id: @project.id %>
           </ul>
         </div>
         <div class="btn-group">
