[Issue #94] Added gem and styles for autocomplete

--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
     <%= stylesheet_link_tag "bootstrap-responsive.rtl", :media => "all" %>
     <%= stylesheet_link_tag "bootstrap-rtl-overrides", :media => "all"%>
-    <%= javascript_include_tag "bootstrap.rtl", :media => "all" %>
+    <%= javascript_include_tag "bootstrap.rtl" %>
+    <%= javascript_include_tag "select2_locale_ar" %>
   <% else %>
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
     <%= javascript_include_tag "bootstrap" %>
