[#358][WIP] adds controllers, views and model functions

--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -34,7 +34,7 @@
                   <span>Sign in with an existing account</span>
                 </div>
                 <div class="providers">
-                  <a href="/auth/facebook"><img src="assets/facebook_logo.png" width="60px"></a>
+                  <a href="/auth/facebook"><img src="/assets/facebook_logo.png" width="60px"></a>
                 </div>
               <% end %>
 
