--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -28,10 +28,10 @@
                 <%= f.password_field :password, style: "margin-bottom: 15px;", placeholder: t(:password), size: "30" %>
                 <%= f.submit t(:sign_in), style: "clear: left; width: 100%; height: 32px; font-size: 13px;", :class => "btn btn-primary" %>
                 <div style="padding-top:5px; text-align:center; font-style:italic;">
-                  <span>OR</span>
+                  <span><%= t(:or) %></span>
                 </div>
                   <div style="padding:5px; text-align:center;">
-                  <span>Sign in with an existing account</span>
+                  <span><%= t(:existing_account) %></span>
                 </div>
                 <div class="providers">
                   <a href="/auth/facebook"><img src="/assets/facebook_logo.png" width="60px"></a>
