--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -291,7 +291,7 @@ function setButtons(){
     <h2 class="lang-header">Pick the language you want to play with</h2><br>
     <div class="game-lang">
 
-      <button data-content="<p>This button allows you to form, and vote on, only english words during game play<p> <button class='btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>got it</button>" data-placement="left" data-title="<h4>English Button</h4>" data-html="true" id = "eng-btn" class="btn btn-info eng-btn" onclick="setLang(0)">English</button><br><br><br><br>
+      <button data-content="<p>This button allows you to form, and vote on, only english words during game play<p> <button class='btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>got it</button>" data-placement="left" data-title="<h4>English Button</h4>" data-html="true" id = "eng-btn" class="fade btn btn-info eng-btn" onclick="setLang(0)">English</button><br><br><br><br>
 
       <button data-content="<p>This button allows you to form, and vote on, only arabic words during game play<p> <button class='btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='ar-btn-po'onclick='destroy(this.id)'>got it</button>" data-placement="right" data-title="<h4>Arabic Button</h4>" data-html="true" id = "ar-btn" class="btn btn-success ar-btn" onclick="setLang(1)">Arabic</button><br><br><br><br>
 
