--- a/arability/app/views/search/search_keywords.html.erb
+++ b/arability/app/views/search/search_keywords.html.erb
@@ -4,23 +4,30 @@
 	  	<%= content_tag(:div, :class => "input-append") do %>
 	  		<% text_field_tag(:search, @search_keyword,
 	  											:placeholder => t(:search_here),
-	  											:class => "search-query") + %>
-				<% button_tag(:type => "submit", :class => "btn", :id => "search_button") do %>
+	  											:class => "search-query",
+                          :tabindex => "1") + %>
+				<% button_tag(:type => "submit", :class => "btn", :id => "search_button",
+          :tabindex => "3") do %>
 					<% content_tag(:i, nil,:class => "icon-search") %>
 				<% end %>
 			<% end %>
-      <input name="categories_input" type="text" id="categories" class="categories-autocomplete" autocomplete="off" placeholder="<%= t :enter_categories %>" value=""/>
-
+      <div style="padding:5px; display:inline;">
+        <select name="category_ids[]" tabindex="2" style="width:565px" id="categories-autocomplete" multiple="true">
+          <% @categories_by_locale.each do |id, name| %>
+            <option value="<%= id %>"><%= name %></option>
+          <% end %>
+        </select>
+      </div>
       <input name="project_id" type="hidden" value="<%= @project_id %>"/>
 		<% end %>
 
 		<% if @similar_keywords.blank? && !@search_keyword.blank? %>
 			<div class="well well-small">
 				<span>
-					<%= form_tag(keywords_create_path, :method => "post", :class => "form-search", :style => "margin-bottom:0px;") do %>
+					<%= form_tag(keywords_create_path, :method => "post",
+           :style => "margin-bottom:0px;", :onsubmit => "submit_add_keyword(this)") do %>
             <%= content_tag(:span, t(:keyword_not_found)) %>
             <input name="keyword[name]" value="<%= @search_keyword %>" type="hidden">
-            <input name="categories_entered" type="hidden" value="<%= @categories.join(',') %>" />
             <input name="redirect" value="<%= search_keywords_path %>" type="hidden">
             <input class="btn btn-link" style="padding:0px;" value="<%= t(:add_word) %>" type="submit">
 					<% end %>
@@ -37,4 +44,22 @@
 		<% end %>
 	</div>
 </div>
-<%= render "categories-autocomplete" %>
+<script type="text/javascript">
+  function submit_add_keyword(form) {
+    $form = $(form);
+    $form.append($("#categories-autocomplete"));
+  }
+
+  $(document).ready(function() {
+    $("#categories-autocomplete").select2({
+      placeholder: "<%= t(:enter_categories) %>",
+      width: 'resolve',
+    }).val(preloaded).trigger("change");
+    $("input[name=search]").focus()
+  });
+
+  function preloaded() {
+    return <%= raw @category_ids.to_s || [] %>;
+  }
+</script>
+
