[WIP][issue #368] code implemented, and documentation added

--- a/arability/app/views/admin/add_category.html.erb
+++ b/arability/app/views/admin/add_category.html.erb
@@ -21,10 +21,10 @@
     <legend>إضافة فئة جديدة</legend>
     <input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
     <label>إسم الفئة بالعربية</label>
-    <input type="text" placeholder="إسم الفئة" name="name1">
+    <input type="text" placeholder="إسم الفئة" name="arabic_name">
     <label>إسم الفئة بالإنجليزية</label>
-    <input type="text" placeholder="Name of category" name="name2">
+    <input type="text" placeholder="Name of category" name="english_name">
     <br>
-    <button type="submit" class="btn">Submit</button>
+    <button type="submit" class="btn">إضافة</button>
   </fieldset>
 </form>
