[Issue #359][WIP] almost done with the second part of the story

--- a/arability/app/views/guest/sign_up.html.erb
+++ b/arability/app/views/guest/sign_up.html.erb
@@ -96,9 +96,9 @@
 
 
         <% if I18n.locale == :ar %>
-            <div><%= f.submit "سجل الحساب", :class => "btn btn-success" %></div>
+            <div><%= f.submit "استمرار", :class => "btn btn-success" %></div>
         <% else %>
-            <div><%= f.submit "Sign up", :class => "btn btn-success" %></div>
+            <div><%= f.submit "Continue", :class => "btn btn-success" %></div>
         <% end %>
     </div>
     </div>
