[issue %353] [WIP] implements the autocomplete for keyword search inside project view

--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -75,7 +75,7 @@
             <tr>
               <td style="text-align:center">
                 <% keyword = @words[count].name%>
-                <%= link_to @words[count].name , search_path(search: keyword) %>
+                <%= link_to keyword, search_path(search:keyword, :project_id => @project.id), :method => :post %>
               </td>
               <td style="text-align:center">
                 <%= collection_select(:synonym_name , :text, @words[count].synonyms.collect {|syn| syn} , :id, :name, {:selected => @synonyms[count].id}, {:class=>'input', :name=>'normalSelect', :id=>'synonym_select', :style=>'width:50%'}) %>
@@ -91,18 +91,18 @@
               <td style="text-align:center">
                 <% if I18n.locale == :en %>
                 <div class="input-append" >
-                  <input type="text"  class="search-query" style ="border-radius: 15px 0px 0px 15px;" id ="selected_keyword" placeholder="search here") ></input>
-                  <input type="button" class="btn" id="search_btn" style="border-radius: 0px 15px 15px 0px;" onclick="load_synonyms()"></input>
+                  <input type="text"  class="search-query autocomplete" name="keyword_search" style ="border-radius: 15px 0px 0px 15px;" id ="selected_keyword" autocomplete="off" placeholder="search here") ></input>
+                  <button type="button" class="btn" id="search_btn" type="submit" style="border-radius: 0px 15px 15px 0px;" onclick="load_synonyms()"><i class="icon-search"></i></button>
                 </div>
                 <% elsif I18n.locale == :ar %>
                  <div class="input-append" >
-                  <input type="text"  class="search-query" style ="border-radius: 0px 15px 15px 0px;" id ="selected_keyword" placeholder="ابحث هنا") ></input>
-                  <input type="button" class="btn" id="search_btn" style="border-radius: 15px 0px 0px 15px;" onclick="load_synonyms()"></input>
+                  <input type="text"  class="search-query autocomplete" name="keyword_search" style ="border-radius: 0px 15px 15px 0px;" id ="selected_keyword" autocomplete="off" placeholder="ابحث هنا") ></input>
+                  <button type="button" class="btn" id="search_btn" type="submit" style="border-radius: 15px 0px 0px 15px;" onclick="load_synonyms()"><i class="icon-search"></i></button>
                 </div>
                 <% end %>
               </td> 
               <td style="text-align:center" >
-                <%= collection_select(:synonym_name , :text, [], :id, :name, {:prompt => "enter a word first" }, {:class=>'input_synonym', :name=>'select_menu', :id=>'selected_synonym', :disabled => true, :style=>'width:70%'}) %>
+                <%= collection_select(:synonym_name , :text, [], :id, :name, {:prompt => t(:enter_word_first) }, {:class=>'input_synonym', :name=>'select_menu', :id=>'selected_synonym', :disabled => true, :style=>'width:70%'}) %>
               </td> 
               <td style="text-align:center">
                 <input class="btn btn-primary" type="submit" style="font-size:15px; text-align:center" onclick="add_keyword_with_synonym()" value="<%= t(:add_to_project) %>"></input>
@@ -110,39 +110,37 @@
             </tr>
       </table>
     </div>
-  </form>  
-  <p id="hoppa_text"></p>   
+  </form> 
 <script type="text/javascript" charset="utf-8">
-$(".input").change(function(){
-  var new_synonym_id = $(this).val();
-  //alert(new_synonym_id);
-    $.post("/developers/projects/"+"<%= @project.id %>"+"/change_synonym", { synonym_id: new_synonym_id, keyword: "download",project_id: "<%= @project.id %>" });
-    // $.ajax({
-    //   type: "POST",
-    //   url: "/developers/projects/"+"<%= @project.id %>"+"/change_synonym",
-    //   data: {synonym_id: new_synonym_id,project_id: "<%= @project.id %>" }
-    // });
-});
-
-
-
-function add_keyword_with_synonym(){
-  var keyword_name = $("#selected_keyword").val();
-  var synonym_id = $("#selected_synonym option:selected").val();
-  //alert("<%= @project.id %>");
-  //alert(synonym_id);
-  if(keyword_name != "" && synonym_id != ""){
-    //$.post("/developers/projects/quick_add", { keyword:keyword_name, synonym_id: synonym_id,
-      //project_id: "<%= @project.id %>" });
-      $.ajax({
-        type: "POST",
-        url: "/developers/projects/"+"<%= @project.id %>"+"/quick_add",
-        data: {synonym_id: synonym_id, keyword:keyword_name ,project_id: "<%= @project.id %>" }
-      });   
+  $(".autocomplete").typeahead({
+    source: fetch_keywords,
+    items: 4,
+    highlighter: function(item) {
+      return item
     }
-}
-function load_synonyms(){
-  var keyword = $("#selected_keyword").val();
-  $.post("/developers/projects/load_synonyms",{word:keyword, project_id: "<%= @project.id %>"} );
-}
+  });
+  function fetch_keywords(keyword, callback){
+    $.post("autocomplete_keyword", { keyword_search: keyword }, function(data){
+      callback(data);
+    })
+  }
+  $(".input").change(function(){
+    var new_synonym_id = $(this).val();
+      $.post("/developers/projects/"+"<%= @project.id %>"+"/change_synonym", { synonym_id: new_synonym_id, keyword: "download",project_id: "<%= @project.id %>" });
+  });
+  function add_keyword_with_synonym(){
+    var keyword_name = $("#selected_keyword").val();
+    var synonym_id = $("#selected_synonym option:selected").val();
+    if(keyword_name != "" && synonym_id != ""){
+        $.ajax({
+          type: "POST",
+          url: "/developers/projects/"+"<%= @project.id %>"+"/quick_add",
+          data: {synonym_id: synonym_id, keyword:keyword_name ,project_id: "<%= @project.id %>" }
+        });   
+      }
+  }
+  function load_synonyms(){
+    var keyword = $("#selected_keyword").val();
+    $.post("/developers/projects/load_synonyms",{word:keyword, project_id: "<%= @project.id %>"} );
+  }
 </script>
